--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <div class="main-container">
         <div class="game-box">
+            <div class="title">
+                <h1 id="title">TIC-TAC-TOE</h1>
+            </div>
             <div class="game-board">
-
+                <button id="start-button">START GAME</button>
             </div>
         </div>
     </div>
