--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="title">
                 <h1 id="title">TIC-TAC-TOE</h1>
             </div>
-            <div class="game-board">
+            <div class="game-board" id="board-selector">
                 <button id="start-button">START GAME</button>
             </div>
         </div>
