--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
                 <h1 id="title">TIC-TAC-TOE</h1>
             </div>
             <div class="game-board" id="board-selector">
-                <button id="start-button">START GAME</button>
+                <div class="input-div">
+                    <label for="player1">Player 1 name(X): </label>
+                    <input type="text" id="player1">
+                    <label for="player2">Player 2 name(O): </label>
+                    <input type="text" id="player2">
+                </div>
+                <div class="start-button">
+                    <button id="start-button">START GAME</button>
+                </div>
             </div>
         </div>
     </div>
