edit board style

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
                 <h1 id="title">TIC-TAC-TOE</h1>
             </div>
             <div class="game-board" id="board-selector">
-                <div class="input-div">
-                    <label for="player1">Player 1 name(X): </label>
-                    <input type="text" id="player1">
-                    <label for="player2">Player 2 name(O): </label>
-                    <input type="text" id="player2">
-                </div>
-                <div class="start-button">
+                <div class="input-cont" id="input-container">
+                    <span class="choose-player">
+                        <label for="player1">Player 1(X):</label>
+                        <input type="text" id="player1" placeholder="Enter Player 1 name">
+                    </span>
+                    <span class="choose-player">
+                        <label for="player2">Player 2(O):</label>
+                        <input type="text" id="player2" placeholder="Enter Player 2 name">
+                    </span>
                     <button id="start-button">START GAME</button>
                 </div>
             </div>
