--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="game-box">
             <div class="title">
                 <h3 id="scr1">Player 1: 0</h3>
-                <h1 id="title">TIC-TAC-TOE</h1>
+                <h1 id="title">TIC TAC TOE</h1>
                 <h3 id="scr2">Player 2: 0</h3>
             </div>
             <div class="game-board" id="board-selector">
