--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="main-container">
         <div class="game-box">
             <div class="title">
-                <h3 id="scr1">Player 1</h3>
+                <h3 id="scr1">Player 1(X)</h3>
                 <h1 id="title">TIC TAC TOE</h1>
-                <h3 id="scr2">Player 2</h3>
+                <h3 id="scr2">Player 2(O)</h3>
             </div>
             <div class="game-board" id="board-selector">
                 <div class="input-cont" id="input-container">
